--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
     "autoload": {
         "psr-0": {
             "Umbrella\\Ya\\Boleto": "",
-            "Umbrella\\Ya\\Api\\Boleto\\": "../ya-boleto-api"
+            "Umbrella\\Ya\\Api\\Boleto\\": "../../../../ya-boleto-api"
         }
     },
     "target-dir": "Umbrella/YA/Boleto"
