resolved #0000 - Atualizando o composer

--- a/composer.json
+++ b/composer.json
@@ -34,5 +34,5 @@
             "Umbrella\\Ya\\Boleto": ""
         }
     },
-    "target-dir": "Umbrella/YA/Boleto"
+    "target-dir": "Umbrella/Ya/Boleto"
 }
