--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         }
     ],
     "require": {
-        "umbrella/boleto-api": "dev-master"
+        "php": ">=5.3"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*"
