--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -11,23 +11,23 @@ tools:
             paths: ["src/*"]
     php_cpd:
         enabled: true
-        excluded_dirs: ["test", "vendor"]
+        excluded_dirs: ["/src/Umbrella/Ya/Boleto/Tests/", "vendor"]
     php_cs_fixer:
         enabled: true
         config:
             level: all
         filter:
-            paths: ["src/*", "test/*"]
+            paths: ["src/*", "/src/Umbrella/Ya/Boleto/Tests/*"]
     php_loc:
         enabled: true
     php_mess_detector:
         enabled: true
         filter:
-            paths: ["src/*"]
+            paths: ["/src/Umbrella/Ya/Boleto/Tests/*"]
     php_pdepend:
         enabled: true
-        excluded_dirs: ["test", "vendor"]
+        excluded_dirs: ["/src/Umbrella/Ya/Boleto/Tests/", "vendor"]
     php_analyzer:
         filter:
-            paths: ["src/*", "test/*"]
+            paths: ["src/*", "/src/Umbrella/Ya/Boleto/Tests/*"]
     sensiolabs_security_checker: true
