--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -2,6 +2,7 @@ before_commands:
     - "composer install --dev --prefer-source"
 
 tools:
+    external_code_coverage: true
     php_code_sniffer:
         enabled: true
         config:
@@ -12,7 +13,7 @@ tools:
         enabled: true
         excluded_dirs: ["/src/Umbrella/Ya/Boleto/Tests/", "vendor"]
     php_cs_fixer:
-        enabled: false
+        enabled: true
         config:
             level: all
         filter:
