--- a/composer.json
+++ b/composer.json
@@ -30,8 +30,13 @@
         "phpunit/phpunit": "3.7.*"
     },
     "autoload": {
-        "psr-0": {
-            "": "src/"
+        "psr-4": {
+            "Umbrella\\Ya\\Boleto\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Umbrella\\Ya\\Boleto\\Tests\\": "tests/"
         }
     }
 }
