--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -19,14 +19,14 @@
 
     <filter>
         <whitelist>
-            <directory>./</directory>
+            <directory suffix=".php">./</directory>
             <exclude>
-                <directory>./tests/</directory>
-                <directory>./vendor</directory>
+                <directory suffix=".php">tests</directory>
+                <directory suffix=".php">vendor</directory>
             </exclude>
         </whitelist>
     </filter>
-    
+
     <logging>
         <log type="coverage-html" target="build/coverage" title="Ya Boleto Coverage" charset="UTF-8" yui="true" highlight="true" />
         <log type="coverage-clover" target="build/logs/clover.xml"/>
