--- a/composer.json
+++ b/composer.json
@@ -29,10 +29,10 @@
     ],
     "require": {
         "php": ">=5.3",
-        "nesbot/carbon": "1.*"
+        "nesbot/carbon": "~1.17"
     },
     "require-dev": {
-        "phpunit/phpunit": "3.7.*"
+        "phpunit/phpunit": "~4.5"
     },
     "autoload": {
         "psr-4": {
