--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
     ],
     "require": {
         "php": ">=5.3",
-        "nesbot/carbon": "~1.17"
+        "nesbot/carbon": "~1.17",
+        "respect/validation": "~0.9.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.5"
