--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "parallax/boleto",
+    "name": "parallaxsolutions/boleto",
     "type": "library",
     "description": "YaBoleto é uma biblioteca para geração de boletos bancários de forma simples em PHP.",
     "keywords": [],
