--- a/composer.json
+++ b/composer.json
@@ -48,5 +48,10 @@
   },
   "config": {
     "bin-dir": "bin"
+  },
+  "extra": {
+    "branch-alias": {
+      "dev-master": "2.0-dev"
+    }
   }
 }
