--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,15 @@
 language: php
 
 php:
-  - 5.3
   - 5.4
   - 5.5
   - 5.6
+  - 7.0
+  - hhvm
 
-before_install:
-  - composer install --dev
+before_script:
+  - composer self-update
+  - composer install --prefer-dist
 
 script:
  - phpunit --coverage-clover=coverage.clover --configuration ./phpunit.xml.dist ./tests
@@ -15,3 +17,7 @@ script:
 after_script:
  - wget https://scrutinizer-ci.com/ocular.phar
  - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
+
+matrix:
+  allow_failures:
+    - php: 7.0
