changing my email.

--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         },
         {
             "name": "Ayrton Ricardo da Silva",
-            "email": "ayrton_jampa@hotmail.com"
+            "email": "ayrtonricardo@hotmail.com"
         },
         {
             "name": "Ian da Silva Rodrigues",
