Removed unnecessary checks

--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,5 @@
 vendor
-vendor/*
-/app/tmp/*
-app/tmp/*
-tmp/*
-*.log
-._*
-.~lock.*
-.buildpath
-.project
-.settings
+bin
+build
 composer.lock
 coverage.clover
-/resources/cache
-/resources/cache/*
-resources/cache
-resources/cache/*
-/build/
-bin
