--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
   ],
   "require": {
     "php": ">=5.3",
-    "respect/validation": "~0.9.0"
+    "respect/validation": "~0.9.0|^1.1"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.8"
